-
Bug
-
Resolution: Done
-
Not Evaluated
-
Qt Creator 2.4.0
-
None
-
96890db8f4f1f4cc64772f3a2044ad94758a59dd
The topic "Setting Up QML Debugging" reads:
Select Projects, and then select the Link QML debugging library check box in Build Steps.
The check box has this title when using Qt up to version 4.7.4 only. If you use Qt 4.8 the title is "Enable QML debugging". The documentation should reflect this.
- resulted from
-
QTCREATORBUG-6535 Cannot profile QML applications
-
- Closed
-
| For Gerrit Dashboard: QTCREATORBUG-6541 | ||||||
|---|---|---|---|---|---|---|
| # | Subject | Branch | Project | Status | CR | V |
| 8890,2 | QML Debugging: Always name qmake step "Enable QML debugging" | 2.4 | qt-creator/qt-creator | Status: MERGED | 0 | 0 |
| 8971,1 | Doc: reflect change in the UI | 2.4 | qt-creator/qt-creator | Status: MERGED | +2 | 0 |