QML Debugging: Always name qmake step "Enable QML debugging"

We used to differ between Qt 4.7, where the step was "Link QML debugging
library", and 4.8. Let's just call the checkbox "Enable QML debugging"
for all Qt versions, which is easier to document.

Change-Id: I9bdffd75769a9d3c08efbf7471e00be46c9d9ed7
Task-number: QTCREATORBUG-6541